Add a share button.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="circular">#FFFFFFFF</color>
+    <color name="share">#FFFFFF</color>
 </resources>
